everything else that belongs to the ECO update.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ application/config/general.php
 application/config/database.php
 application/models/arcmodel.php
 application/models/mysqlmodel.php
+system
